uploading week 2 day 2 final file

--- a/Week 2 labs/lab_1.ipynb
+++ b/Week 2 labs/lab_1.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ce5adbff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from turtle import mode\n",
+    "#from turtle import mode\n",
     "\n",
     "\n",
     "agent = Agent(name= \"Jokester\", instructions= \"You a master joke teller\", model= \"gpt-4o-mini\")"
